package ithos.object;

// Unit/department within an organization or other logical grouping
message OrgUnit {
    optional string description = 1;
}
